WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17928
testkjs shouldn't require "-f"
https://bugs.webkit.org/show_bug.cgi?id=17928
Summary
testkjs shouldn't require "-f"
Jesse Ruderman
Reported
2008-03-18 16:52:51 PDT
It would be nice if "testkjs a.js" worked. I have a bunch of tools for fuzzing and testcase reduction that don't expect to have to pass extra arguments like "-f".
Attachments
Proposed patch
(1.79 KB, patch)
2008-06-07 20:34 PDT
,
Cameron Zwarich (cpst)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-06-07 20:34:38 PDT
Created
attachment 21569
[details]
Proposed patch
mitz
Comment 2
2008-06-07 20:45:07 PDT
Comment on
attachment 21569
[details]
Proposed patch + fprintf(stderr, "Usage: testkjs [options] [files] [-- arguments]\n"); Looks like it's really [options and files], but I guess it's okay for the usage message to suggest separating them. r=me
Cameron Zwarich (cpst)
Comment 3
2008-06-07 20:52:38 PDT
Landed in
r34437
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug