2008-06-07  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Dan Bernstein.

        Bug 17928: testkjs shouldn't require "-f"
        <https://bugs.webkit.org/show_bug.cgi?id=17928>

        * kjs/testkjs.cpp:
        (printUsageStatement):
        (parseArguments):


Canonical link: https://commits.webkit.org/26888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34437 268f45cc-cd09-0410-ab3c-d52691b4dbfc